packages/astro/test/fixtures/errors/src/pages/preact-syntax-error.astro
---
import PreactSyntaxError from '../components/PreactSyntaxError.jsx';
---

<div>
  <PreactSyntaxError />
</div>
